add sauce movement

--- a/vrep_creative_cmd/package.xml
+++ b/vrep_creative_cmd/package.xml
@@ -8,5 +8,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>geometry_msgs</depend>
   <depend>roscpp</depend>
+  <depend>rospy</depend>
   <depend>std_msgs</depend>
 </package>
